--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,12 +6,12 @@
   <meta name="description" content="The HTML5 Herald">
   <meta name="author" content="SitePoint">
 
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
-
 </head>
 
 <body>
-    <h2>EJS test <%= answer %></h2>
-  <script src="js/scripts.js"></script>
+    <div id="root">
+        Loading...
+    </div>
+  <script src="/bundle.js" charset="utf-8"></script>
 </body>
 </html>
